add `test` endpoint
